# EmbDivBench-measuring-diversity-with-embeddings-emnlp2026

./: .gitignore  LICENSE  README.md  pyproject.toml
data_creation/: README.md
data_creation/natural_text/: 1_inspect_l1_pool.py  2_precompute_fps_embeddings.py  2_precompute_fps_embeddings.sh  3_fps_l1_selection_check.py  3_fps_l1_selection_check.sh  4_build_natural_text_bench.py  4_build_natural_text_bench.sh
data_creation/simulated/: simulated_gmm.py  simulated_gmm.sh
data_creation/synthetic/: synthetic_umap_vis.py  synthetic_umap_vis.sh
data_creation/wiki/: 2_precompute_fps_embeddings.py  2_precompute_fps_embeddings.sh  3_fps_l1_selection_check.sh  4_build_wiki_semdiv.sh  4_build_wiki_semdiv_shuffle.py  fps_l1_selections.json
datasets/: README.md
docs/: Makefile  README.md
docs/source/: conf.py  index.md
docs/source/user-guide/: axes.md  cli.md  measures.md  vectors.md
examples/: 2d_experiments.ipynb  test_eval_measures.py  test_eval_style_data.py  text_experiments.ipynb
src/EmbDivBench/: __init__.py  _accepts_text.py  axes_registry.py  cli.py  convenience.py  measures_registry.py
src/EmbDivBench/measures/: _types.py  bins_entropy.py  bottleneck.py  chamfer_dist.py  cluster_inertia.py  convex_hull_volume_2d.py  dcscore.py  diameter.py  dist_dispersion.py  energy.py  graph_entropy.py  hamdiv.py  log_determinant.py  mag_areas.py  mean_pw_dist.py  mst_dispersion.py  radius.py  renyi_entropy.py  span_centroid.py  span_medoid.py  sum_diameter.py  (+3 more)
test/: test_SBERT.py  test_compute_pairwise_cache.py  test_diversity.py  test_embed_cache.py  test_two_d.py
(+144 files in other folders)
