[build-system]
requires = ["setuptools>=61.0"] # Ensure setuptools is at least version 61.0, which supports pyproject.toml
build-backend = "setuptools.build_meta" # Use setuptools as the build backend

[project]
name = "EmbDivBench"
version = "0.1.0"
description = "Reference implementations of embedding-based diversity measures (EMNLP submission)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["diversity", "nlp", "embeddings", "text-diversity", "metrics"]
authors = [
    {name = "Anonymous (under review for EMNLP)"},
]
dependencies = [
    "datasets~=3.3.2",
    "matplotlib~=3.10.0",
    "networkx>=2.8.8",
    "numpy~=2.3.5",
    "pandas~=2.3.1",
    "scikit-learn~=1.7.1",
    "scipy~=1.16.0",
    "sentence-transformers>=2.7.0",
    "typer>=0.9.0",
    "umap-learn>=0.5.9",
    "vendi-score>=0.0.3",
]

# The `mag_areas` measure depends on `magnipy` (and its runtime libs:
# numexpr / seaborn / krypy). magnipy pins scipy==1.13.0 which conflicts
# with our scipy>=1.16.0, so magnipy must be installed manually with
# `--no-deps`. See the README ("Optional: mag_areas") for the commands.
# At runtime, `mag_areas` shims `scipy.integrate.trapz = trapezoid`
# (removed in scipy 1.14) so magnipy still imports cleanly.

[project.scripts]
EmbDivBench = "EmbDivBench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

